WebKit/win/WebCoreSupport/WebInspectorClient.cpp
@@ -213,7 +213,6 @@ WebInspectorFrontendClient::WebInspectorFrontendClient(WebView* inspectedWebView
     , m_frontendHwnd(frontendHwnd)
     , m_frontendWebView(frontendWebView)
     , m_frontendWebViewHwnd(frontendWebViewHwnd)
-    , m_shouldAttachWhenShown(false)
     , m_attached(false)
     , m_destroyingInspectorView(false)
 {
@@ -354,14 +353,19 @@ void WebInspectorFrontendClient::showWindowWithoutNotifications()
     ASSERT(m_frontendWebView);
     ASSERT(m_inspectedWebViewHwnd);
 
-    // If no preference is set - default to an attached window. This is important for inspector LayoutTests.
-    String shouldAttach = m_inspectedWebView->page()->inspectorController()->setting(InspectorController::inspectorStartsAttachedSettingName());
-    m_shouldAttachWhenShown = shouldAttach != "false";
-        
-    if (m_shouldAttachWhenShown && !canAttachWindow())
-        m_shouldAttachWhenShown = false;
-    
-    if (!m_shouldAttachWhenShown) {
+    bool shouldAttach = false;
+    if (m_attached)
+        shouldAttach = true;
+    else {
+        // If no preference is set - default to an attached window. This is important for inspector LayoutTests.
+        String shouldAttachPref = m_inspectedWebView->page()->inspectorController()->setting(InspectorController::inspectorStartsAttachedSettingName());
+        shouldAttach = shouldAttachPref != "false";
+
+        if (shouldAttach && !canAttachWindow())
+            shouldAttach = false;
+    }
+
+    if (!shouldAttach) {
         // Put the Inspector's WebView inside our window and show it.
         m_frontendWebView->setHostWindow(reinterpret_cast<OLE_HANDLE>(m_frontendHwnd));
         SendMessage(m_frontendHwnd, WM_SIZE, 0, 0);
