WebKit/win/WebCoreSupport/WebInspectorClient.h
@@ -112,7 +112,6 @@ private:
     COMPtr<WebView> m_frontendWebView;
     HWND m_frontendWebViewHwnd;
 
-    bool m_shouldAttachWhenShown;
     bool m_attached;
 
     WebCore::String m_inspectedURL;
